# metafox

./: .gitignore  README.md  best_model.pkl  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: README.md  ci-cd.yml
examples/: README.md
k8s/: api.yml  flower.yml  flower_deployment.yaml  flower_service.yaml  metafox-storage.yml  metafox_api_deployment.yaml  metafox_api_service.yaml  metafox_worker_deployment.yaml  metafox_worker_service.yaml  mongo.yml  mongo_deploymeny.yaml  mongo_service.yaml  pvcs.yml  pvs.yml  rabbitmq.yml  rabbitmq_deployment.yaml  rabbitmq_service.yaml  redis.yml  redis_deployment.yaml  redis_service.yaml  secrets.yml  worker.yml
sandbox/: app.py  celeryconfig.py  main.py  tasks.py  worker.py
serving_ml/: README.md  app.py  models.py  requirements.txt  task_client.py
serving_ml/assets/: Churn_Modelling_Train_data.csv
serving_ml/celery_task_app/: tasks.py  worker.py
serving_ml/celery_task_app/ml/: model.py
src/metafox/: celery.py  celeryconfig.py  fastapi.py  main.py  metafox_api.py  tasks.py
src/metafox/api/: metafox_api.py
src/metafox/app/: app.py
src/metafox/common/: logger.py
src/metafox/dal/: idatastore.py
src/metafox_api/: .dockerignore  Dockerfile  __main__.py  auth.py  celeryconfig.py  constants.py  dependencies.py  openapi.py  requirements.txt
src/metafox_shared/: Dockerfile  config.py  requirements.txt  utilis.py
src/metafox_worker/: .dockerignore  Dockerfile  celeryconfig.py  dependencies.py  main.py  requirements.txt
tools/: tpot_regressor.py
(+48 files in other folders)
