[tool.poetry]
name = "metafox-demo"
version = "0.1.0"
description = ""
authors = ["marijajolovic <marija.jolovic.kg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.73.0"
redis = "^5.0.6"

[tool.poetry.group.dev.dependencies]
celery = {extras = ["redis"], version = "^5.4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
